--- a/assets/scss/_header.scss
+++ b/assets/scss/_header.scss
@@ -12,7 +12,7 @@
             top: 0px;
             left: 0px;
             float: left;
-            background: $primary-black url('../images/logo-flag.png') no-repeat top left;
+            background: $primary-black url('../images/DSA_LSC_Logo.jpg') no-repeat top left;
             background-size: auto 100%;
             text-indent: -99999px;
             height: $header-height-browser;
